--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -547,7 +547,7 @@
 		</div>
     <section class="clients">
 
-    <div class="hidden-xs p70" id="client_carousel">
+    <div class=" p70" id="client_carousel">
     	<div id="myCarousel" class="carousel slide">
      
     <!-- Carousel items -->
@@ -555,74 +555,74 @@
         
     <div class="item active">
         <div class="row-fluid">
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/goi_client.png", class: "image_responsive client_logo", alt: "GLORY OF INDIA") %><h5><strong>GLORY OF INDIA</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/goi_client.png", class: "image_responsive client_logo rpad_top2", alt: "GLORY OF INDIA") %><h5><strong>GLORY OF INDIA</strong></h5>
             </div> 
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/CMC_client.png", class: "image_responsive client_logo", alt: "CMC") %><h5><strong>CONFIDENT MARKETING CLUB</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/CMC_client.png", class: "image_responsive client_logo rpad_top2", alt: "CMC") %><h5><strong>CONFIDENT MARKETING CLUB</strong></h5>
             </div>            
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/cmit_client.png", class: "image_responsive client_logo", alt: "CMIT") %><h5><strong>CMIT SOLUTIONS</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/cmit_client.png", class: "image_responsive client_logo rpad_top2", alt: "CMIT") %><h5><strong>CMIT SOLUTIONS</strong></h5>
             </div>
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/idea2ins_client.png", class: "image_responsive client_logo", alt: "IDEA 2 INCEPTION") %><h5><strong>IDEA 2 INCEPTION</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/idea2ins_client.png", class: "image_responsive client_logo rpad_top2", alt: "IDEA 2 INCEPTION") %><h5><strong>IDEA 2 INCEPTION</strong></h5>
             </div> 
         </div><!--/row-fluid-->
     </div><!--/item-->
      
     <div class="item">
         <div class="row-fluid">
-            <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/calgarysp.png", class: "image_responsive client_logo", alt: "Calgary Service Plumbers") %><h5><strong>CALGARY SERVICES PLUMBERS</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/calgarysp.png", class: "image_responsive client_logo rpad_top2", alt: "Calgary Service Plumbers") %><h5><strong>CALGARY SERVICES PLUMBERS</strong></h5>
             </div>       
 
-            <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/logolel_client.png", class: "image_responsive client_logo", alt: "Leela Eco Spa") %><h5><strong>Leela Eco Spa</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/logolel_client.png", class: "image_responsive client_logo rpad_top2", alt: "Leela Eco Spa") %><h5><strong>Leela Eco Spa</strong></h5>
             </div>
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/peak1logo.jpg", class: "image_responsive client_logo", alt: "Peak1 Management Group") %><h5><strong>Peak1 Management Group</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/peak1logo.jpg", class: "image_responsive client_logo rpad_top2", alt: "Peak1 Management Group") %><h5><strong>Peak1 Management Group</strong></h5>
             </div>
             
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/kennan-logo.png", class: "image_responsive client_logo", alt: "Ken-nan") %><h5><strong>KEN-NAN Automotive Sales</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/kennan-logo.png", class: "image_responsive client_logo rpad_top2", alt: "Ken-nan") %><h5><strong>KEN-NAN Automotive Sales</strong></h5>
             </div>
         </div><!--/row-fluid-->
     </div><!--/item-->
 
     <div class="item">
         <div class="row-fluid">
-            <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/logo-ANZAC.png", class: "image_responsive client_logo", alt: "Anzac") %><h5><strong>ANZAC SECURITY SERVICES</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/logo-ANZAC.png", class: "image_responsive client_logo rpad_top2", alt: "Anzac") %><h5><strong>ANZAC SECURITY SERVICES</strong></h5>
             </div>       
 
-            <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/logo-APPRECIADO.png", class: "image_responsive client_logo", alt: "Appreciado") %><h5><strong>APPRECIADO</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/logo-APPRECIADO.png", class: "image_responsive client_logo rpad_top2", alt: "Appreciado") %><h5><strong>APPRECIADO</strong></h5>
             </div>
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/logo-CARPET-MILLS-OUTLET.png", class: "image_responsive client_logo", alt: "Carpet Mills Outlet") %><h5><strong>CARPET MILLS OUTLET</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/logo-CARPET-MILLS-OUTLET.png", class: "image_responsive client_logo rpad_top2", alt: "Carpet Mills Outlet") %><h5><strong>CARPET MILLS OUTLET</strong></h5>
             </div>
             
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/logo-delhidarbar.png", class: "image_responsive client_logo", alt: "Delhidarbar") %><h5><strong>DELHIDARBAR</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/logo-delhidarbar.png", class: "image_responsive client_logo rpad_top2", alt: "Delhidarbar") %><h5><strong>DELHIDARBAR</strong></h5>
             </div>
         </div><!--/row-fluid-->
     </div><!--/item-->
 
     <div class="item">
         <div class="row-fluid">
-            <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/logo-realestate.png", class: "image_responsive client_logo", alt: "Twins") %><h5><strong>TWINS</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/logo-realestate.png", class: "image_responsive client_logo rpad_top2", alt: "Twins") %><h5><strong>TWINS</strong></h5>
             </div>       
 
-            <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/logo-taj.png", class: "image_responsive client_logo", alt: "Taj Indian Restaurant") %><h5><strong>TAJ INDIAN RESTAURANT</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/logo-taj.png", class: "image_responsive client_logo rpad_top2", alt: "Taj Indian Restaurant") %><h5><strong>TAJ INDIAN RESTAURANT</strong></h5>
             </div>
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/logo-WATERTECH.png", class: "image_responsive client_logo", alt: "Watertech Plumbing") %><h5><strong>WATERTECH PLUMBING</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/logo-WATERTECH.png", class: "image_responsive client_logo rpad_top2", alt: "Watertech Plumbing") %><h5><strong>WATERTECH PLUMBING</strong></h5>
             </div>
             <!-- duplicate CMIT-->
-            <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/cmit_client.png", class: "image_responsive client_logo", alt: "CMIT") %><h5><strong>CMIT SOLUTIONS</strong></h5>
+            <div class="col-xs-12 col-sm-3 text-center">
+              <%= image_tag("clients/cmit_client.png", class: "image_responsive client_logo rpad_top2", alt: "CMIT") %><h5><strong>CMIT SOLUTIONS</strong></h5>
             </div>
             
         </div><!--/row-fluid-->
