padding for image in client

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -556,7 +556,7 @@
     <div class="item active">
         <div class="row-fluid">
             <div class="col-xs-12 col-sm-3 text-center">
-              <%= image_tag("clients/goi_client.png", class: "image_responsive client_logo rpad_top2", alt: "GLORY OF INDIA") %><h5><strong>GLORY OF INDIA</strong></h5>
+              <%= image_tag("clients/goi_client.png", class: "image_responsive client_logo", alt: "GLORY OF INDIA") %><h5><strong>GLORY OF INDIA</strong></h5>
             </div> 
             <div class="col-xs-12 col-sm-3 text-center">
               <%= image_tag("clients/CMC_client.png", class: "image_responsive client_logo rpad_top2", alt: "CMC") %><h5><strong>CONFIDENT MARKETING CLUB</strong></h5>
@@ -573,7 +573,7 @@
     <div class="item">
         <div class="row-fluid">
             <div class="col-xs-12 col-sm-3 text-center">
-              <%= image_tag("clients/calgarysp.png", class: "image_responsive client_logo rpad_top2", alt: "Calgary Service Plumbers") %><h5><strong>CALGARY SERVICES PLUMBERS</strong></h5>
+              <%= image_tag("clients/calgarysp.png", class: "image_responsive client_logo", alt: "Calgary Service Plumbers") %><h5><strong>CALGARY SERVICES PLUMBERS</strong></h5>
             </div>       
 
             <div class="col-xs-12 col-sm-3 text-center">
@@ -592,7 +592,7 @@
     <div class="item">
         <div class="row-fluid">
             <div class="col-xs-12 col-sm-3 text-center">
-              <%= image_tag("clients/logo-ANZAC.png", class: "image_responsive client_logo rpad_top2", alt: "Anzac") %><h5><strong>ANZAC SECURITY SERVICES</strong></h5>
+              <%= image_tag("clients/logo-ANZAC.png", class: "image_responsive client_logo", alt: "Anzac") %><h5><strong>ANZAC SECURITY SERVICES</strong></h5>
             </div>       
 
             <div class="col-xs-12 col-sm-3 text-center">
@@ -611,7 +611,7 @@
     <div class="item">
         <div class="row-fluid">
             <div class="col-xs-12 col-sm-3 text-center">
-              <%= image_tag("clients/logo-realestate.png", class: "image_responsive client_logo rpad_top2", alt: "Twins") %><h5><strong>TWINS</strong></h5>
+              <%= image_tag("clients/logo-realestate.png", class: "image_responsive client_logo", alt: "Twins") %><h5><strong>TWINS</strong></h5>
             </div>       
 
             <div class="col-xs-12 col-sm-3 text-center">
