--- a/app/views/articles/_menu.html.erb
+++ b/app/views/articles/_menu.html.erb
@@ -15,28 +15,30 @@
 						<li><a href="/#about">About</a></li>
 						<li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="/#service">Services<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-				                <li><a href="/web-development">Web Development</a></li>
-				                <li><a href="/app-development">App Development</a></li>
+				                <!-- <li><a href="/web-development">Web Development</a></li>
+				                <li><a href="/app-development">App Development</a></li> -->
 				                <li><a href="/seo-digital-marketing">SEO &amp; Digital Marketing</a></li>
-				                <li><a href="/custom-development">Custom Development</a></li>
+				                <!-- <li><a href="/custom-development">Custom Development</a></li> -->
 				            </ul>
 				        </li>
-						<li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Products<b class="caret"></b></a>
+				        
+						<!-- <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Products<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 				                <li><a href="/restaurant-app">Restaurants App</a></li>
 				                <li><a href="/hr-industry-app">HR Industry - Recruitment App</a></li>
 				                <li><a href="/3d-product-catalogue-app">3D Product Catalogue App</a></li>
 				                <li><a href="/appointment-scheduler-app">Appointment Scheduler App</a></li>
 				            </ul>
-				        </li>
-						<li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="/#technologies">Technologies<b class="caret"></b></a>
+				        </li> -->
+				        <li><a href="/#technologies">Technologies</a></li>
+						<!-- <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="/#technologies">Technologies<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 				                <li><a href="/mobile">Mobile</a></li>
 				                <li><a href="/web-technologies">Web Technologies</a></li>
 				                <li><a href="/web-cms">Web CMS</a></li>
 				                <li><a href="/cloud-platforms">Cloud Platforms</a></li>
 				            </ul>
-				        </li>
+				        </li> -->
 						<li><a href="/#client">Clients</a></li>
 						<li><a href="/articles">Blog</a></li>
 						<li class="last"><a href="/#contact">Contact</a></li>
